k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: animal-help-ingress
  namespace: animal-help-app
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "10m"
spec:
  ingressClassName: nginx
  rules:
    - host: spa.animal-help-app.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: client-spa-service
                port:
                  number: 3000
    - host: api.animal-help-app.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: resource-server-service
                port:
                  number: 3001
    - host: ssr.animal-help-app.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: client-ssr-service
                port:
                  number: 3002
    - host: b2b.animal-help-app.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: client-b2b-service
                port:
                  number: 3003
    - host: keycloak.animal-help-app.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: keycloak-service
                port:
                  number: 8080
